<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wrong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@string/FONT"
            android:gravity="center"
            android:text="@string/correct"
            android:textAlignment="center"
            android:textColor="@color/color_8_green"
            android:textSize="@dimen/c_r_fontSize"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_correct_answer_c"
            android:layout_width="290dp"
            android:layout_height="169dp"
            android:layout_margin="40dp"
            android:layout_weight="3"
            android:background="@drawable/answer_dog_correct"
            android:contentDescription="@string/image_viewer"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/source"
            tools:ignore="MissingConstraints" />

        <LinearLayout

            android:id="@+id/result_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/over_all_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/FONT"
                android:padding="@dimen/answer_gb_padding"
                android:text="@string/over_all"
                android:textAlignment="center"
                android:textColor="@color/color_4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_result_dog_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/FONT"
                android:text="@string/dummy_txt"
                android:textAlignment="center"
                android:textColor="@color/color_4"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/button_next_dog_c"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".1"
            android:background="@drawable/button_next"
            android:clickable="true"
            android:elevation="1dp"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/button_submit"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_view" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
