<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.IdentifyDog.IdentifyDog">

    <TextView
        android:id="@+id/score_dog"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nuevastd_bold"
        android:text="@string/dummy_score"
        android:textAlignment="center"
        android:textColor="@color/color_10_blue1"
        android:textSize="@dimen/title_text_size"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RelativeLayout

        android:id="@+id/starter_Filter_dog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/filter"
        android:elevation="4dp">

        <TextView
            android:id="@+id/play_text_dog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="9dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/touch_to_play"
            android:textColor="@android:color/white"
            android:textFontWeight="600"
            android:textSize="@dimen/level_timer_tx_siz"
            tools:targetApi="p" />

        <ImageButton
            android:id="@+id/button_play_dog"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/play_text_dog"
            android:layout_centerInParent="true"
            android:background="@drawable/empty_bg"
            android:scaleType="fitXY"
            android:contentDescription="@string/play_button"
            android:src="@drawable/ic_img_play_icon" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_padding"
        android:layout_marginEnd="@dimen/title_padding"
        android:background="@drawable/page_title"
        android:elevation="@dimen/elevation_height"
        android:transitionName="title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:elevation="5dp"
            android:fontFamily="@string/FONT"
            android:text="@string/identify_dog"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/button_back_dog"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@drawable/empty_bg"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        android:elevation="@dimen/elevation_height"
        android:focusable="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <LinearLayout
        android:id="@+id/timer_layout_dog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/timer_padding"
        android:layout_marginEnd="@dimen/timer_padding"
        android:background="@drawable/timer_bg"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/text_timer_dog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:elevation="5dp"
            android:fontFamily="@font/nuevastd_bold"
            android:gravity="center"
            android:text="@string/dummy_timer"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/level_timer_tx_siz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/dog_fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>